--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
   font-family: "Arsenal SC", sans-serif;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 .container {
   display: flex;
   margin: 0 auto;
