--- a/src/components/Contacts/Contact.module.css
+++ b/src/components/Contacts/Contact.module.css
@@ -23,3 +23,23 @@
   padding-left: 24px;
   padding-right: 24px;
 }
+
+@media (max-width: 768px) {
+  .contact {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px;
+  }
+
+  .contact__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: auto;
+  }
+
+  .contact__item {
+    display: flex;
+    margin: 0 auto;
+    padding: 8px 0;
+  }
+}
