--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -15,3 +15,19 @@
 .footer__span {
   margin-left: 5px;
 }
+
+@media (max-width: 768px) {
+  .footer {
+    height: auto;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .footer__wrapper {
+    flex-direction: column;
+  }
+
+  .footer__span {
+    margin-top: 10px;
+  }
+}
