--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -60,3 +60,13 @@
   font-size: 28px;
   margin-left: 15px;
 }
+
+@media (max-width: 768px) {
+  .navigation {
+    flex-direction: column;
+  }
+
+  .item {
+    margin: 10px 0;
+  }
+}
