--- a/src/pages/AboutPage/AboutPage.module.css
+++ b/src/pages/AboutPage/AboutPage.module.css
@@ -39,7 +39,44 @@
   margin-bottom: 30px;
 }
 
+.about__description {
+  opacity: 0.8;
+}
+
 .about__image {
   width: 500px;
   height: 500px;
+}
+
+@media (max-width: 768px) {
+  .about__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: auto;
+    min-height: auto;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .about__left {
+    max-width: 100%;
+  }
+
+  .about__title {
+    font-size: 36px;
+    margin: 20px;
+
+    margin-bottom: 20px;
+  }
+
+  .about__image {
+    width: 100%;
+    height: auto;
+  }
+
+  .about__description {
+    margin: 20px;
+    font-size: 18px;
+  }
 }
