--- a/src/pages/ContactPage/ContactPage.module.css
+++ b/src/pages/ContactPage/ContactPage.module.css
@@ -73,3 +73,43 @@
   margin: 0 auto;
   width: 50px;
 }
+
+@media (max-width: 768px) {
+  .contact__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: auto;
+    min-height: auto;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .contact__right {
+    margin: 0 auto;
+    max-width: 100%;
+  }
+
+  .contact__title {
+    font-size: 36px;
+    margin-bottom: 20px;
+  }
+
+  .contact_hr {
+    width: 100%;
+  }
+
+  .links__item {
+    float: none;
+    margin-bottom: 20px;
+  }
+
+  .links__title {
+    margin: 10px 0;
+  }
+
+  .contact__image {
+    width: 100%;
+    height: auto;
+  }
+}
