--- a/src/pages/ContactPage/ContactPage.module.css
+++ b/src/pages/ContactPage/ContactPage.module.css
@@ -5,6 +5,10 @@
 
   width: 100%;
   min-height: 100%;
+  background-color: #000;
+  color: #fff;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .contact__wrapper {
@@ -59,14 +63,14 @@
 
   cursor: pointer;
   font-size: 48px;
-  color: #000;
   text-decoration: none;
+  color: #fff;
 }
 
 .contact__image {
   display: flex;
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
 }
 
 .item__hr {
