--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -47,6 +47,26 @@
   transition: all 0.1s ease-in;
 }
 
+.burger {
+  display: none;
+  cursor: pointer;
+  margin-right: 15px;
+}
+
+.burger span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px;
+  background: black;
+}
+
+.burger__icon {
+  display: flex;
+  width: 30px;
+  height: 30px;
+}
+
 .item:hover {
   color: #6e6e6ecc;
 }
@@ -63,7 +83,24 @@
 
 @media (max-width: 768px) {
   .navigation {
+    display: none;
+  }
+
+  .navigation.open {
+    display: flex;
     flex-direction: column;
+    position: absolute;
+    background: white;
+
+    width: 200px;
+    left: 170px;
+    top: 180px;
+    border: 1px solid #000;
+    border-radius: 5px;
+  }
+
+  .burger {
+    display: block;
   }
 
   .item {
