--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -54,7 +54,34 @@
   height: 700px;
 }
 
+@media (max-width: 1415px) {
+  .banner_left {
+    margin-left: 100px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .banner_left {
+    margin-left: 400px;
+    width: 100%;
+  }
+
+  .banner__image {
+    width: 600px;
+  }
+}
+
 @media (max-width: 768px) {
+  .banner__image {
+    margin-top: 50px;
+    width: 100%;
+  }
+
+  .banner__hr {
+    width: 100px;
+  }
+
   .banner__wrapper {
     flex-direction: column;
     align-items: flex-start;
@@ -66,6 +93,9 @@
   }
 
   .banner_left {
+    padding: 15px;
+    margin-left: 0px;
+
     width: 100%;
   }
 
