--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -53,14 +53,6 @@
   margin-right: 15px;
 }
 
-.burger span {
-  display: block;
-  width: 25px;
-  height: 3px;
-  margin: 5px;
-  background: black;
-}
-
 .burger__icon {
   display: flex;
   width: 30px;
@@ -81,7 +73,33 @@
   margin-left: 15px;
 }
 
+@media (max-width: 1415px) {
+  .header__left {
+    margin-left: 100px;
+  }
+}
+
+@media (max-width: 1322px) {
+  .header__left {
+    margin-left: 300px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .header__left {
+    margin-left: 400px;
+  }
+}
+
 @media (max-width: 768px) {
+  .title {
+    display: none;
+  }
+
+  .logo {
+    margin-left: 250px;
+  }
+
   .navigation {
     display: none;
   }
@@ -90,11 +108,11 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    background: white;
+    background: #fff;
 
     width: 200px;
-    left: 170px;
-    top: 180px;
+    left: 550px;
+    top: 160px;
     border: 1px solid #000;
     border-radius: 5px;
   }
@@ -105,5 +123,27 @@
 
   .item {
     margin: 10px 0;
+  }
+}
+
+@media (max-width: 550px) {
+  .logo {
+    margin-left: 580px;
+  }
+
+  .navigation.open {
+    left: 200px;
+    top: 160px;
+  }
+}
+
+@media (max-width: 375px) {
+  .logo {
+    margin-left: 620px;
+  }
+
+  .navigation.open {
+    left: 150px;
+    top: 160px;
   }
 }
