--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
+  justify-content: center;
 
   max-width: 1400px;
   padding: 0 10px;
@@ -11,9 +12,10 @@
   flex: 1 1 300px;
   max-width: 300px;
   height: 300px;
-  background-color: #ccc;
-
   margin: 5px;
+
+  background-color: #ccc;
+  transition: background-color 0.1s ease;
 }
 
 .galley__card:hover {
