--- a/src/pages/GalleryPage/GalleryPage.module.css
+++ b/src/pages/GalleryPage/GalleryPage.module.css
@@ -32,6 +32,7 @@
 .banner_left {
   align-items: center;
   width: 550px;
+  padding-left: 20px;
 }
 
 .banner__navigation {
@@ -39,7 +40,6 @@
 }
 
 .banner__title {
-  padding: 15px;
   display: flex;
   font-weight: 500;
   font-size: 72px;
@@ -60,4 +60,64 @@
 .banner__image {
   width: 700px;
   height: 700px;
+}
+
+@media (max-width: 1415px) {
+  .banner_left {
+    margin-left: 100px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 1024px) {
+  .banner_left {
+    margin-left: 400px;
+    width: 100%;
+  }
+
+  .banner__image {
+    width: 600px;
+  }
+}
+
+@media (max-width: 768px) {
+  .banner__image {
+    margin-top: 50px;
+    width: 100%;
+  }
+
+  .banner__hr {
+    width: 220px;
+  }
+
+  .banner__wrapper {
+    flex-direction: column;
+    align-items: flex-start;
+    min-width: auto;
+    min-height: auto;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+  .banner_left {
+    margin: 0 auto;
+    max-width: 100%;
+  }
+
+  .banner__title {
+    padding-left: 25px;
+    font-size: 68px;
+    padding: 0;
+  }
+
+  .banner__description {
+    font-size: 24px;
+    margin: 20px 0;
+  }
+
+  .banner__image {
+    width: 100%;
+    height: auto;
+  }
 }
