--- a/src/components/Gallery/Gallery.module.css
+++ b/src/components/Gallery/Gallery.module.css
@@ -14,15 +14,17 @@
   height: 300px;
   margin: 5px;
 
-  background-color: #ccc;
-  transition: background-color 0.1s ease;
-}
-
-.galley__card:hover {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: #000;
 }
 
 .galley__image {
   width: 100%;
   height: 100%;
+
+  opacity: 1;
+  transition: all 0.1s ease-in;
+}
+
+.galley__image:hover {
+  opacity: 0.6;
 }
