add pagination + fixed

--- a/src/components/Contacts/Contact.module.css
+++ b/src/components/Contacts/Contact.module.css
@@ -4,7 +4,7 @@
   justify-content: end;
 
   width: 100%;
-  background-color: rgba(0, 162, 255, 0.685);
+  background-color: #40312e;
   min-height: 50px;
 }
 
